cleaned up some tags, fixed nav align on firefox

--- a/public/css/general.less
+++ b/public/css/general.less
@@ -257,9 +257,11 @@ nav {
 
   .pagelinks {
     margin-left: 3.125em;
+    display: flex;
+    align-items: center;
   }
   .pagelink{
-    padding: 10px;
+    padding: 20px;
     margin-inline-start: 3.125em;  
     & {
       background-image: linear-gradient(@mapurple, @mapurple);
